# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
application/: CMakeLists.txt
application/include/Chess/: Board.h  Chess.h  Constant.h  GameLogic.h  PieceSquareTable.h  PlayerColorSelection.h  PlayerCountSelection.h  RenderInformation.h  Renderer.h
application/include/Chess/Pieces/: Bishop.h  Knight.h  Pawn.h
application/include/SDL/: Mouse.h  SDLButton.h
application/src/: main.cpp
application/src/Chess/: Board.cpp  Chess.cpp  GameLogic.cpp  MinimaxAI.cpp  PlayerColorSelection.cpp  PlayerCountSelection.cpp  Renderer.cpp
application/src/Chess/Pieces/: King.cpp
application/src/SDL/: Mouse.cpp  SDLButton.cpp  SDLHandler.cpp
application/src/Unittest/: catch_amalgamated.cpp
chess_engine/: CMakeLists.txt
chess_engine/include/: BitBoard.h  Board.h  ChessEngine.h  MoveGenerator.h  NegamaxAI.h  PieceSquareTable.h  RNG.h  Utility.h
chess_engine/src/: BitBoard.cpp  Board.cpp  ChessEngine.cpp  MoveGenerator.cpp  NegamaxAI.cpp  RNG.cpp  Utility.cpp
chess_engine/src/Unittest/: AITest.cpp  AI_Test.cpp  BitBoard_Test.cpp  Current_Test.cpp  MoveGeneration_Test.cpp  Utility_Test.cpp
include/Chess/: Board.h  Chess.h  GameLogic.h  MinimaxAI.h  NegamaxAI.h  PlayerColorSelection.h  PlayerCountSelection.h  RNG.h  RenderInformation.h  Renderer.h
include/Chess/Pieces/: King.h  Pawn.h  Queen.h  Rook.h
include/SDL/: Mouse.h  MouseInformation.h  SDLButton.h  SDLHandler.h
src/: main.cpp
src/Chess/: Board.cpp  Chess.cpp  GameLogic.cpp  MinimaxAI.cpp  NegamaxAI.cpp  PlayerColorSelection.cpp  PlayerCountSelection.cpp  RNG.cpp  Renderer.cpp
src/Chess/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/SDL/: Mouse.cpp  SDLButton.cpp  SDLHandler.cpp
src/Unittest/: AITest.cpp
